[tool.poetry]
name = "leetcode31"
version = "0.1.0"
description = ""
authors = ["tamirlan-nurbulatuly <tamirlan@1fit.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
